--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 =  "0.36.0"
 rand = "0.8.4"
 
+[dependencies.sdl2]
+version =  "0.36.0"
+features = ["ttf"]
